# lox

./: .clang-format  .gitignore  CMakeLists.txt  grammar.bnf
astgen/: Makefile  astgen  astgen.cpp  writer.hpp
include/common/: common.hpp  exception.hpp  finally.hpp
include/script/: ast.hpp  ast_json_dumper.hpp  environment.hpp  interpreter.hpp  lexer.hpp  location.hpp  object.hpp  parser.hpp  resolver.hpp  script_variable.hpp  token.hpp  value.hpp
include/script/ast/: ast_json_dumper.hpp  ast_printer.hpp  expr.hpp  json_dumper.hpp  node.hpp  visitor.hpp
jlox/: CMakeLists.txt  CMakePresets.json
jlox/include/common/: exception.hpp  finally.hpp  utils.hpp
jlox/include/script/: ast.hpp  ast_dumper.hpp  callable.hpp  class.hpp  class_instance.hpp  environment.hpp  function.hpp  interpreter.hpp  lexer.hpp  object.hpp  parser.hpp  resolver.hpp  token.hpp
jlox/src/: main.cpp
jlox/src/common/: utils.cpp
jlox/src/common/memory/: arena.cpp
jlox/src/script/: ast.cpp  ast_dumper.cpp  callable.cpp  class.cpp  class_instance.cpp  environment.cpp  function.cpp  interpreter.cpp  lexer.cpp  object.cpp  parser.cpp  resolver.cpp  token.cpp
jlox/test/: call3.lox  class1.lox  class2.lox  for1.lox  logical1.lox  resolver3.lox  scope1.lox  while2.lox
scripts/: test.lox
src/: lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  token.cpp  token.hpp
src/ast/: expr.hpp  node.hpp  printer.hpp
src/common/: common.hpp  utils.cpp
src/common/memory/: arena.cpp  arena.hpp
src/lox/: lexer.cpp  lexer.hpp  lox.cpp  lox.hpp  token.cpp  token.hpp
src/lox/ast/: ast.hpp  expr.hpp
src/script/: ast.cpp  ast_json_dumper.cpp  environment.cpp  interpreter.cpp  lexer.cpp  object.cpp  parser.cpp  parser.hpp  resolver.cpp  script_variable.cpp  token.cpp  token.hpp
src/script/ast/: ast_json_dumper.cpp  expr.hpp  json_dumper.cpp  node.hpp  printer.hpp  visitor.hpp
test/: call1.lox  call2.lox  call5.lox  expr2.lox  expr3.lox  expr4.lox  interpret.lox  interpret1.lox  interpret3.lox  interpret5.lox  logical1.lox  print1.lox  resolver1.lox  unused1.lox  while1.lox
test/c/: binary_expr.c  comma_expr.c  comma_expr2.c  logical_expr.c
